--- a/BA_argo_doc/systementwurf.tex
+++ b/BA_argo_doc/systementwurf.tex
@@ -26,7 +26,7 @@ Um das Modell weiter fortzuführen, wurde diese Ereigniskette in ein Entitätssc
 Wie in Abbildung \ref{fig:grobetwurf_architektur_datenaggregation} zu sehen ist, besteht die Applikation aus zwei Grundkomponenten. Ein Teil ist für die Beschaffung und Aufbereitung der Daten zuständig, während der zweite Teil für die Darstellung der Daten zuständig ist. 
 
 % BEGIN OOP ARCHITEKTUR   AGGREGATION
-\subsubsection{Entwurf der Datenaggregation}
+\subsubsection{Entwurf der Datenaggregation}\label{sec:entwurfAggregation}
 \begin{figure}[h!]
 \centering
 \includegraphics[width=\textwidth]{pix/grobentwurf_dataaggregation.png}
