Ausblick angefangen & neue Farben.

--- a/BA_argo_doc/auswertung.tex
+++ b/BA_argo_doc/auswertung.tex
@@ -1,6 +1,14 @@
 \section{Demonstration und Auswertung}
 
 
+\subsection{Geschaffene Lösung}
+
+Im Rahmen dieser Arbeit wurde eine Webplattform geschaffen, die es erlaubt, die Daten des Argo-Programms durch eine Kartendarstellung der Weltmeere zu identifizieren und die Daten zur Anzeige zu bringen.
+Dafür wurden die Daten aus den Datensätzen extrahiert und in ein Relationales Schema überführt. Die Webpräsenz nutzt die Datenbank um die Inhalte darzustellen. In Abbildung \ref{fig:argodataWeb} ist ein Screenshot der hier erarbeiteten Lösung zu sehen.
+
+
+...
+
 \begin{figure}[H]
  \centering
  \includegraphics[width=\textwidth]{pix/argodata_complete.png}
@@ -8,6 +16,13 @@
  \caption{Die Webpräsenz von Argo-Data}
  \label{fig:argodataWeb}
 \end{figure}
+
+\subsubsection{Erweiterungsmöglichkeiten}
+
+
+
+
+\subsubsection{Kritik}
 
 
 
