--- a/BA_argo_doc/preamble.tex
+++ b/BA_argo_doc/preamble.tex
@@ -53,10 +53,14 @@ breaklinks=true] {hyperref}
 \setlength\parindent{0pt}
 
 \definecolor{codeblack}{RGB}{83,83,83}
-\renewcommand*{\headfont}{\color{codeblack}\bfseries} 
-\renewcommand*{\pnumfont}{\normalfont\bfseries}
 \definecolor{xdeepblack}{RGB}{64,64,64}
+
+\renewcommand*{\headfont}{\color{xdeepblack}\bfseries} 
+\renewcommand*{\pnumfont}{\normalfont\bfseries}
 \addtokomafont{descriptionlabel}{\color{xdeepblack}\normalfont\bfseries}
+
+\definecolor{codegray}{rgb}{0.5,0.5,0.5}
+\setheadsepline{1pt}[\color{codegray}]
 
 %\urlstyle{tt}
 
