--- a/BA_argo_doc/preamble.tex
+++ b/BA_argo_doc/preamble.tex
@@ -74,7 +74,7 @@ breaklinks=true] {hyperref}
 \usepackage{setspace}
 \usepackage[flushmargin]{footmisc}
 %\usepackage{tikz}
-%\usepackage{wrapfig}
+\usepackage{wrapfig}
 \usepackage{nameref}
 %\usepackage{lmodern}
 
