doc - Umfrage Auswertung und Darstellung

--- a/BA_argo_doc/anforderungen.tex
+++ b/BA_argo_doc/anforderungen.tex
@@ -22,7 +22,7 @@
       
     \begin{figure}[h!]
     \centering
-    \includegraphics[width=0.9\textheight, angle=90]{pix/graph_anforderungen.png}
+    \includegraphics[width=\textwidth]{pix/graph_anforderungen.png}
     % graph_anforderungen.png: 1208x850 px, 72dpi, 42.63x29.99 cm, bb=0 0 1208 850
     \caption{Anforderungen und ihre Abhängigkeiten als gerichteter Graph}
     \label{fig:graph_anforderungen}
