--- a/BA_argo_doc/bib.bib
+++ b/BA_argo_doc/bib.bib
@@ -269,3 +269,12 @@ note = {(Accessed on 02/20/2018)}
   year={2011},
   publisher={Wichmann}
 }
+
+@misc{Quantita52:online,
+author = {Matthias Rauer},
+title = {Quantitative Usablility-Analysen mit der System Usability Scale (SUS)},
+howpublished = {\url{https://blog.seibert-media.net/blog/2011/04/11/usablility-analysen-system-usability-scale-sus/}},
+month = {},
+year = {},
+note = {(Accessed on 03/06/2018)}
+}
