--- a/BA_argo_doc/testphase.tex
+++ b/BA_argo_doc/testphase.tex
@@ -146,3 +146,69 @@ So long and thanks for all the fish. Bye.
 
 \newpage
 \subsection{Usability-Umfrage}
+
+Um die Usability der Webapplikation zu testen, wurde eine Umfrage durchgeführt. Als Grundlage diente der System Usability Scale (SUS). 
+Für diese Umfrage waren insgesamt 10 Fragen innerhalb einer Scala von 0 (gar nicht) bis 5 (sehr)  zu bewerten. (vgl. Quantita52:online)
+
+An der Umfrage nahmen insgesamt 12 Personen teil. Diese setzen sich aus Bekannten- und Kollegenkreis zusammen. Die Daten wurden anonym erhoben, ein Rückschluss auf die Personen ist damit nicht mehr möglich.
+
+In Abbildung \ref{fig:surveyAuswertung}
+ist eine grafische Zusammenfassung der Ergebnisse zu sehen. In dieser findet sich zu jeder Frage ein Balkendiagram der akkumulierten Häufigkeit, kombiniert mit einem Box-Whisker-Plot. Der Whisker-Boxplot setzt sich aus folgenden Elementen zusammen:
+
+\begin{description}
+ \item [Box]
+    Dies markiert den Bereich in welchem sich 50\% der Daten finden. Der Median wird durch eine vertikale Linie gezeigt. Die hier vorliegende Darstellung ist um den Mittelwert (mean) erweitert. Die schmale Linie stellt den mean und die fette den Median dar.
+ \item [Whisker (Antennen)]
+    Dieser Bereich stellt die äußeren Quantile dar. In der Grundeinstellung (1.5) umfasst der Wertebereich der Whiskers dabei 75\% der gesamten Daten. 
+\end{description}
+
+
+\subsubsection{Testauswertung}
+
+Im Folgenden findet sich eine detaillierte Auswertung der hier erhobenen Daten:
+
+
+\paragraph{Ich kann mir gut vorstellen, ArgoData regelmäßig zu nutzen}
+    Diese Frage zielt auf die Wiederbesuchsbereitschaft ab. Die Antworten sind hier sehr breit gestreut. In insgesamt 4 von 5 Antwortmöglichkeiten wurden Antworten gegeben. Das Maximum lag mit 4 Antworten in der Antwort 4. Der gesamte Antwortbereich wird von den Whiskers markiert. Die Box streckt sich von 2 bis 4. Der Median liegt bei 3, der Durchschnitt zwischen 2.5 und 3.
+ 
+ \paragraph{Ich empfinde ArgoData als unnötig komplex.}
+    In dieser Frage, bildet sich die Reduktion der Komplexität ab. Dire Antworten finden sich hier im bereich 1 bis 3. Das Maximum liegt in der Antwort 1. Der Median liegt bei 1, das arithmetische Mittel bei knapp über 1.5. Die Box umfasst die Antworten 1 bis 2. Der Whisker schließt Antwort 3 mit ein.
+    
+  \paragraph{Ich empfinde ArgoData als einfach zu nutzen.}
+    Durch diese Frage wird die Einfachheit der Darstellung und die Reduktion der Benutzungskomplexität abgebildet. Die Antworten finden sich hier im Bereich 3 bis 5. Das Maximum liegt mit 6 Antworten klar bei Antwort 5. Die Box umfasst Antworten 4 und 5. Der Whisker schließt Antwort 3 mit ein.
+
+\paragraph{Ich denke, dass ich Hilfestellung bei der Benutzung brauchen würde\newline um ArgoData zu benutzen.}
+    Diese Frage ermittelt ob genügend Hilfestellung zur Verfügung gestellt wurde.  Die Antworten finden sich im Bereich 1 bis 4. Das Maximum von 4 findet sich in den Antworten 1 und 3.  Der Median liegt bei 2.5, das arithmetische Mittel liegt zwischen 2.5 und 2. Die Box umfasst Antworten 1 bis 3, der Whisker schließt Antwort 4 mit ein.
+
+\paragraph{Ich finde, dass die Funktionen (Karte, Steuerung, Anzeige von Daten) gut integriert sind}. 
+    Diese Frage ermittelt die Integration der Steuerungselemente. Hier finden sich die Antworten zwischen 3 und 5. Das Maximum liegt mit 6 bei Antwort 4. Der Median liegt bei 4, das arithmetische Mittel zwischen 4 und 4.5. Die Box umfasst  die Antworten 4 und 5. Der Whisker schließt Antwort 3 mit ein.
+    
+\paragraph{Ich finde, dass es in ArgoData zu viele Inkonsistenzen gibt.}
+    Diese Frage zielt auf die Integration der Komponenten als Gesamtkonzept ab. Die Antworten finden sich von 1 bis 3. Das Maximum liegt mit 5 bei Antwort 2. Der Median liegt bei 2, das arithmetische Mittel liegt leicht darüber. Die Box umfasst Antworten 2 und 3. Der Whisker schließt Antwort 1 mit ein.
+    
+\paragraph{Ich kann mir vorstellen, dass die meisten Leute ArgoData schnell zu beherrschen lernen} 
+    Diese Frage versucht über eine extrene Perspektive die Lernkurve bei der Benutzung abzufragen. Die Antworten finden sich im Bereich 3 bis 5. Das Maximum liegt mit 6 bei Antwort 5. Der Median liegt bei 4.5, das arithmetische Mittel liegt knapp darunter. Die Box umfasst die Antworten 4 und 5. Der Whisker schließt Antwort 3 mit ein.
+
+\paragraph{Ich empfinde die Bedienung als sehr umständlich}
+    Diese Frage versucht das Erleben des Bedienungskonzeptes zu erfragen. Die Antworten finden sich im Bereich 1 bis 3. Das Maximum liegt mit 7 bei Antwort 2. Der Median liegt bei 2, das arithmetische Mittel im Bereich zwischen 1.5 und 2. Die Box umfasst die Antworten 1 und 2. Der Whisker schließt Antwort 3 mit ein.
+    
+\paragraph{Ich musste eine Menge Dinge lernen, bevor ich mit ArgoData arbeiten konnte}
+    Diese Frage ermittelt die Lernkurve die zur Benutzung notwendig ist. Hier finden sich die Antworten im Bereich von 1 bis 4. Das Maximum liegt mit 9 Antworten bei Antwort 1. Der Median liegt bei Antwort 1, das arithmetische Mittel bei ca. 1.5. Die Box umfasst Antwort 1, der Whisker schließt keine weiteren Antworten mit ein, diese sind damit als Ausreißer zu betrachten. 
+    
+\subsubsection{Meditation}
+Die Antworten sind durchwegs als positiv zu betrachten. Es scheint, als wäre es gelungen die Komplexität der wissenschaftlichen Daten insofern zu reduzieren, dass diese ohne eine tiefgreifende verstehbar gemacht wurden. Die Frage nach der Hilfestellung scheint einen Verbesserungswunsch bezüglich der angebotenen Hilfestellungen erkennen. Hier gilt es zu überlegen, ob und in welcher Form Hilfestellungen angeboten werden können.
+
+
+
+\begin{figure}
+ \centering
+ \includegraphics[width=\textwidth,height=0.98\textheight,clip=true,trim=2cm 3cm 1.6cm 1cm]{pix/surveyAuswertung.pdf}
+ 
+ \label{fig:surveyAuswertung}
+ \caption{Ergebnis der Umfrage zur Usability}
+\end{figure}
+
+
+
+
+
