doc - Umfrage Auswertung und Darstellung, danksagung Teilnehmer

--- a/BA_argo_doc/testphase.tex
+++ b/BA_argo_doc/testphase.tex
@@ -196,7 +196,8 @@ Im Folgenden findet sich eine detaillierte Auswertung der hier erhobenen Daten:
     Diese Frage ermittelt die Lernkurve die zur Benutzung notwendig ist. Hier finden sich die Antworten im Bereich von 1 bis 4. Das Maximum liegt mit 9 Antworten bei Antwort 1. Der Median liegt bei Antwort 1, das arithmetische Mittel bei ca. 1.5. Die Box umfasst Antwort 1, der Whisker schließt keine weiteren Antworten mit ein, diese sind damit als Ausreißer zu betrachten. 
     
 \subsubsection{Meditation}
-Die Antworten sind durchwegs als positiv zu betrachten. Es scheint, als wäre es gelungen die Komplexität der wissenschaftlichen Daten insofern zu reduzieren, dass diese ohne eine tiefgreifende verstehbar gemacht wurden. Die Frage nach der Hilfestellung scheint einen Verbesserungswunsch bezüglich der angebotenen Hilfestellungen erkennen. Hier gilt es zu überlegen, ob und in welcher Form Hilfestellungen angeboten werden können.
+Die Antworten sind durchwegs als positiv zu betrachten. Die Fragen zur Komplexität lassen erkennen, dass es gelungen ist, die wissenschaftlichen Daten ohne Vorkenntnisse verstehbar darzustellen. Die Bedienungsmuster wurden angenommen und als konsistent und wenig umständlich beschrieben. Die Frage zur Wiederbesuchsbereitschaft weist eine starke Streuung auf. Da es sich um eine Seite mit einem Bildungsangebot handelt, ist dies erklärbar.
+Ein klarer Verbesserungswunsch lässt sich aus der Frage zu den angebotenen Hilfestellungen ableiten. Hier gilt es  zu überlegen, ob und in welcher Form den benutzenden Personen zur Hand gegangen werden kann.
 
 
 
